--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -26,6 +26,8 @@ add_executable(Client
     spectatorwindow.h
     spectatorwindow.cpp
     spectatorwindow.ui
+    placementwindow.h
+    placementwindow.cpp
 )
 
 target_link_libraries (Client PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Network)
